fix flickering tooltip, x axis

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@ code {
 }
 
 .tooltip {
+  pointer-events: none;
   background: #333;
   color: white;
   padding: 4px 8px;
